# aes-config-rs

./: .gitignore  Cargo.toml  README.md  config.toml
examples/: encrypt_config.toml  simple.rs
src/: lib.rs
