[package]
name = "aes-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.1"
clap = { version = "4.1.8", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.39"
toml = "0.7.2"
